@@ -10,6 +10,7 @@ version 1.2:
 	the user itself.
 	- gpomme: adapt to the new DBus notification.
 	- wmpomme: adapt to the new DBus notification.
+	- pommed: added support for PowerBook6,4 and nVidia GPUs.
 
 version 1.1:
 	- gpomme: added theme selection; use -t theme_name to select the
